--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.brianku.project_b"
         minSdkVersion 27
         targetSdkVersion 28
@@ -47,5 +48,6 @@ dependencies {
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.shawnlin:number-picker:2.4.6'
+    implementation 'com.android.support:design:28.0.0'
 
 }
