--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".app_central.AppCentralActivity">
+        <activity android:name=".votes.HandlePinCodeActivity" android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".app_central.AppCentralActivity" android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".votes.PinCodeAndTimerActivity"
