--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".votes.HandlePinCodeActivity" android:screenOrientation="portrait">
+        <activity android:name=".votes.HandlePinCodeActivity"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".app_central.AppCentralActivity" android:screenOrientation="portrait">
+        <activity android:name=".app_central.AppCentralActivity"
+                  android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".votes.PinCodeAndTimerActivity"
@@ -34,10 +36,6 @@
         </activity>
         <activity
                 android:name=".dashboard.OfficialWebSiteActivity"
-                android:screenOrientation="portrait">
-        </activity>
-        <activity
-                android:name=".votes.StartToVoteActivity"
                 android:screenOrientation="portrait">
         </activity>
         <activity
