--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,5 @@ dependencies {
     implementation 'com.shawnlin:number-picker:2.4.6'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
-
-
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
 }
